--- a/01. thanh/[PROJ-01] ImageUploader/PHASE_2/index.html
+++ b/01. thanh/[PROJ-01] ImageUploader/PHASE_2/index.html
@@ -14,6 +14,7 @@
     <script src="script.js"></script>
     <script src="src/index.js"></script>
     <script src="upload.js"></script>
+    <script src="./dist/bundle.js"></script>
     <title>Document</title>
 </head>
 
