--- a/01. thanh/[PROJ-01] ImageUploader/PHASE_2/index.html
+++ b/01. thanh/[PROJ-01] ImageUploader/PHASE_2/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="responsive.css">
     <script src="script.js"></script>
-    <script src="src/index.js"></script>
-    <script src="upload.js"></script>
-    <script src="./dist/bundle.js"></script>
+    <script type="module" src="src/index.js"></script>
+    <script type="module" src="upload.js"></script>
+    <script type="module" src="./dist/bundle.js"></script>
     <title>Document</title>
 </head>
 
