--- a/01. thanh/[PROJ-01] ImageUploader/PHASE_2/index.html
+++ b/01. thanh/[PROJ-01] ImageUploader/PHASE_2/index.html
@@ -9,16 +9,13 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="responsive.css">
-    <script src="script.js"></script>
-    <script type="module" src="src/index.js"></script>
-    <script type="module" src="upload.js"></script>
-    <script type="module" src="./dist/bundle.js"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/responsive.css">
+
+    <title>UploadIMG</title>
 </head>
 
-<body onload="onPageLoading()">
+<body>
     <div class="container-fluid">
         <!--head-->
         <div class="container header">
@@ -69,8 +66,7 @@
                                 <h3>Image</h3>
                                 <p>Upload a Image/Picture.</p>
                                 <div class="choose-file">Choose File</div>
-                                <input class="inp-upload" accept="image/*" onchange="previewFiles1(this);"
-                                    id="inp-image" type="file" multiple>
+                                <input class="inp-upload" accept="image/*" id="inp-image" type="file">
                             </div>
                         </div>
                         <div class="col-6 text-center box-upload">
@@ -79,39 +75,24 @@
                                 <h3>Sticker</h3>
                                 <p>Upload a GIF animated.</p>
                                 <div class="choose-file">Choose File</div>
-                                <input class="inp-upload" accept="image/*" type="file" onchange="previewFiles2(this);">
+                                <input class="inp-upload" accept="image/*" type="file">
                             </div>
                         </div>
                     </div>
                 </div>
-            <!--foot-->
+                <!--foot-->
 
-            
-                <!-- <div class="container-fluid foot">
-                    <div class="container-fluid ">
-                        <h3 class="footer-title">
-                            Any URL
-                        </h3>
-                        <p class="footer-text">
-                            We support media URLs from GIPHY, YouTube, Vimeo, & many others!
-                        </p>
-                        <div class="inp-text">
-                            <input class="form-control" id="inp-link" type="text"
-                                placeholder="Enter any media or GIF URL">
-                        </div>
-                    </div>
-                </div> -->
-                <p id="text-img"></p>
-                <div id="btn-cancel" style="display: none;"><i class="fas fa-times"></i></div>
+                <div id="upprogress"></div>
 
-                <div class="container div-show-img" id="div-show-img">
-                    <div class="clear"></div>
+                <div id="name-img"></div>
 
-                </div>
+
+                <img id="imgPreview">
                 <div class="clear"></div>
-
-                <button onclick="onBtnUploadImg()">UP IMG</button>
-
+                <div class="btn-handle">
+                    <button id="upBtn">UP IMG</button>
+                    <button id="clearBtn">CANCEL</button>
+                </div>
             </div>
         </div>
 
@@ -134,5 +115,30 @@
 
 
 </body>
+
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBLdlz4XgMEud6_P0Teevd-KJKNAPBantA",
+      authDomain: "uploadimg-aeabd.firebaseapp.com",
+      projectId: "uploadimg-aeabd",
+      storageBucket: "uploadimg-aeabd.appspot.com",
+      messagingSenderId: "770456440883",
+      appId: "1:770456440883:web:32d412c858abd84de91346",
+      measurementId: "G-46620WNG13"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
+<script type="module" src="./js/upload.js"></script>
 
 </html>
