Phase2 Update Gallery

--- a/02. long/[PROJ-01] ImageUploader/PHASE_2/index.html
+++ b/02. long/[PROJ-01] ImageUploader/PHASE_2/index.html
@@ -30,7 +30,7 @@
             <!-- Tab Upload Photo -->
             <div class="tab-pane active">
                 <div class="title">MEDIA <span>Upload</span></div>
-                <div class="desc">Upload your pictures, gif, video.</div>
+                <div class="desc">Upload your pictures, gif and video.</div>
                 <div class="input-contain">
                     <div class="input-item">
                         <i class="fa-regular fa-image"></i>
@@ -64,10 +64,21 @@
 
             <!-- Tab Quan Ly Photo -->
             <div class="tab-pane">
-                <h1>Your Files</h1>
+                <div class="title">Your <span>Files</span></div>
+                <div class="desc">Click to view full size</div>
                 <div id="gridMedia"></div>
+                <div class="clear"></div>
             </div>
         </div>
+    </div>
+
+    <div class="gallery">
+        <i class="fas fa-times closeBtn"></i>
+        <div class="innerGallery">
+            <img src="https://firebasestorage.googleapis.com/v0/b/media-upload-7c171.appspot.com/o/image%2Fmx.png?alt=media&token=c56aaec1-9574-418b-a3b8-51c42120004b">
+        </div>
+        <div class="prevBtn"><i class="fas fa-angle-left"></i></div>
+        <div class="nextBtn"><i class="fas fa-angle-right"></i></div>
     </div>
 
     <script type="module">
