--- a/01. thanh/[PROJ-01] ImageUploader/PHASE_2/index.html
+++ b/01. thanh/[PROJ-01] ImageUploader/PHASE_2/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/responsive.css">
-
+    <link rel="stylesheet" href="./css/tab.css">
     <title>UploadIMG</title>
 </head>
 
@@ -37,63 +36,81 @@
         </div>
         <!--body-->
         <div class="container body-show">
-            <div class="background-body">
-                <div class="col-12">
-                    <div class="title text-center">
-                        <h4>
-                            <b>GIPHY</b>
-                            <span>Upload</span>
-                        </h4>
-                        <div class="row">
-                            <div class="col-3"></div>
-                            <div class="col-6">
-                                <h2>
-                                    Upload your collection to share on Facebook, Twitter, Instagram, text message,
-                                    email, &
-                                    everywhere else.
-                                </h2>
-                            </div>
-                            <div class="col-3"></div>
-                        </div>
+            <div class="tab col-12">
+                <div class="row">
+                    <div class="tablink col-6" id="a-first">
+                        <a href="index.html" >Home</a>
                     </div>
-                </div>
-
-                <div class="container-fluid mt-5">
-                    <div class="row mt-5">
-                        <div class="col-6 text-center box-upload">
-                            <div class="container upload-col">
-                                <i class="fa-regular fa-image"></i>
-                                <h3>Image</h3>
-                                <p>Upload a Image/Picture.</p>
-                                <div class="choose-file">Choose File</div>
-                                <input class="inp-upload" accept="image/*" id="inp-image" type="file">
-                            </div>
-                        </div>
-                        <div class="col-6 text-center box-upload">
-                            <div class="container upload-col">
-                                <i class="fa-regular fa-image"></i>
-                                <h3>Sticker</h3>
-                                <p>Upload a GIF animated.</p>
-                                <div class="choose-file">Choose File</div>
-                                <input class="inp-upload" accept="image/*" type="file">
-                            </div>
-                        </div>
+                    <div class="tablink col-6">
+                        <a href="uploading.html">Uploaded</a>
                     </div>
-                </div>
-                <!--foot-->
-
-                <div id="upprogress"></div>
-
-                <div id="name-img"></div>
-
-
-                <img id="imgPreview">
-                <div class="clear"></div>
-                <div class="btn-handle">
-                    <button id="upBtn">UP IMG</button>
-                    <button id="clearBtn">CANCEL</button>
                 </div>
             </div>
+            <div class="tabcontent">
+                <div class="background-body">
+                    <div class="col-12">
+                        <div class="title text-center">
+                            <h4>
+                                <b>GIPHY</b>
+                                <span>Upload</span>
+                            </h4>
+                            <div class="row">
+                                <div class="col-3"></div>
+                                <div class="col-6">
+                                    <h2>
+                                        Upload your collection to share on Facebook, Twitter, Instagram, text message,
+                                        email, &
+                                        everywhere else.
+                                    </h2>
+                                </div>
+                                <div class="col-3"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-fluid mt-5">
+                        <div class="row mt-5">
+                            <div class="col-6 text-center box-upload">
+                                <div class="container upload-col">
+                                    <i class="fa-regular fa-image"></i>
+                                    <h3>Image</h3>
+                                    <p>Upload a Image/Picture.</p>
+                                    <div class="choose-file">Choose File</div>
+                                    <input class="inp-upload" accept="image/*" id="inp-image" type="file">
+                                </div>
+                            </div>
+                            <div class="col-6 text-center box-upload">
+                                <div class="container upload-col">
+                                    <i class="fa-regular fa-image"></i>
+                                    <h3>Sticker</h3>
+                                    <p>Upload a GIF animated.</p>
+                                    <div class="choose-file">Choose File</div>
+                                    <input class="inp-upload" accept="image/*" type="file">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--foot-->
+                    <div class="handle" id="handle">
+                        <div id="upprogress">
+                            <div class="continuous-2"></div>
+                        </div>
+
+                        <div id="name-img"></div>
+
+
+                        <img id="imgPreview">
+                        <div class="btn-handle" id="btn-handle">
+                            <button class="btn-hover color-1" id="upBtn">UPLOAD</button>
+                            <button class="btn-hover color-11" id="clearBtn">CANCEL</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div id="News" class="tabcontent">
+                <div id="show-img" class="background-body"></div>
+            </div> -->
         </div>
 
 
@@ -116,29 +133,9 @@
 
 </body>
 
-<script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyBLdlz4XgMEud6_P0Teevd-KJKNAPBantA",
-      authDomain: "uploadimg-aeabd.firebaseapp.com",
-      projectId: "uploadimg-aeabd",
-      storageBucket: "uploadimg-aeabd.appspot.com",
-      messagingSenderId: "770456440883",
-      appId: "1:770456440883:web:32d412c858abd84de91346",
-      measurementId: "G-46620WNG13"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script>
+<script type="module" src="./js/cf.js"></script>
 <script type="module" src="./js/upload.js"></script>
+<script type="module" src="./js/showimg.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </html>
