phase2 update Delete Files

--- a/02. long/[PROJ-01] ImageUploader/PHASE_2/index.html
+++ b/02. long/[PROJ-01] ImageUploader/PHASE_2/index.html
@@ -75,7 +75,7 @@
     <div class="gallery">
         <i class="fas fa-times closeBtn"></i>
         <div class="innerGallery">
-            <img src="https://firebasestorage.googleapis.com/v0/b/media-upload-7c171.appspot.com/o/image%2Fmx.png?alt=media&token=c56aaec1-9574-418b-a3b8-51c42120004b">
+            <img src="">
         </div>
         <div class="prevBtn"><i class="fas fa-angle-left"></i></div>
         <div class="nextBtn"><i class="fas fa-angle-right"></i></div>
@@ -105,6 +105,7 @@
     <script src="./main.js"></script>
     <script type="module" src="./upload.js"></script>
     <script type="module" src="./display.js"></script>
+    <script type="module" src="./delete.js"></script>
 </body>
 </html>
 
