--- a/02. long/[PROJ-01] ImageUploader/PHASE_2/management.html
+++ b/02. long/[PROJ-01] ImageUploader/PHASE_2/management.html
@@ -35,8 +35,12 @@
                 <div class="title">Your <span>Files</span></div>
                 <div class="desc">Click to view full size</div>
                 <div id="gridMedia"></div>
+                <div class="lds-dual-ring "></div>
                 <div class="clear"></div>
             </div>
+
+            
+
         </div>
     </div>
 
@@ -48,9 +52,18 @@
         <div class="prevBtn"><i class="fas fa-angle-left"></i></div>
         <div class="nextBtn"><i class="fas fa-angle-right"></i></div>
     </div>
-  
+
+    <div class="modal">
+        <div class="popDel">
+            <div class="popDel__tt">Bạn có muốn xóa hình này?</div>
+            <div class="popDel__is">
+                <button class="btn delBtn">Xóa</button>
+                <button class="btn canBtn">Thôi</button>
+            </div>
+        </div>
+    </div>
+
     <script type="module" src="src/config.js"></script>
-    <script type="module" src="src/upload.js"></script>
     <script type="module" src="src/display.js"></script>
 </body>
 </html>
