update upload multiple files

--- a/02. long/[PROJ-01] ImageUploader/PHASE_2/index.html
+++ b/02. long/[PROJ-01] ImageUploader/PHASE_2/index.html
@@ -55,21 +55,36 @@
 
                 <div id="upprogress"></div>
 
-                <div id="exten"></div>
+                <div id="info"></div>
 
-                <img id="imgPreview">
+                <!-- <img id="imgPreview"> -->
+                <div id="imgPreview"> </div>
+
                 
                 <div class="btns">
                     <button id="upBtn" class="btn">Upload</button>
                     <button id ="clearBtn" class="btn">Clear</button>
                 </div>
                 
+
+                <div class="modal">
+                    <div class="popDel">
+                        <div class="ok__ld"></div>
+                        <div class="ok__ss"></div>
+                        <div class="popOk__is">
+                            <button class="btn okBtn">OK</button>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
 
     <script type="module" src="src/config.js"></script>
     <script type="module" src="src/upload.js"></script>
+    <!-- <script type="module" src="src/up2.js"></script> -->
 </body>
 </html>
 
