Chi update code snakeClone

--- a/03. chi/snakeClone/index.html
+++ b/03. chi/snakeClone/index.html
@@ -60,8 +60,8 @@
         <div class="modal-content">
           <span>Bạn có muốn dùng 1 lược để chơi ? </span>
           <div class="btnWrapper">
-            <button class="btn btnYes">Yes</button>
-            <button class="btn btnNo">No</button>
+            <button class="btn btnYes" id="btnYes">Yes</button>
+            <button class="btn btnNo" id="btnNo">No</button>
           </div>
         </div>
       </div>
