Chi update modal notification

--- a/03. chi/[PROJ-3] HTML Game snake clone/index.html
+++ b/03. chi/[PROJ-3] HTML Game snake clone/index.html
@@ -54,7 +54,6 @@
     </div>
 
     <!-- modal -->
-
     <div id="Modal" class="modal">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -62,6 +61,21 @@
           <div class="btnWrapper">
             <button class="btn btnYes" id="btnYes">Yes</button>
             <button class="btn btnNo" id="btnNo">No</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="notification" class="modal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="content-wrapper">
+            <span>Bạn đã hết lược chơi</span>
+            <span>Vui lòng xem quảng cáo để nhận thêm lược chơi</span>
+          </div>
+          <div class="btnWrapper">
+            <button class="btn" id="notificationYes">Yes</button>
+            <button class="btn" id="notificationNo">No</button>
           </div>
         </div>
       </div>
