--- a/04. duy/[PROJ-3] HTML Game Fishing clone/index.html
+++ b/04. duy/[PROJ-3] HTML Game Fishing clone/index.html
@@ -14,11 +14,14 @@
       />
   </head>
   <body>
+    <h1 class="token-display-text">Token : <span id="token-display"></span></h1>
     <canvas></canvas>
+    <div id="test"></div>
+    <div id="test2"></div>
     <div id="modal">
       <h1 class="modal-title">How to Play</h1>
-      <ul style="font-size: 26px;">
-        <div>Token : <span id="token"></span></div>
+      <ul style="font-size: 16px;">
+        <div>Token left : <span id="token"></span></div>
         <div>- Left click to start the cast</div>
         <div>- Left click again to release at the optimal time (red: poor)
           (orange: okay) (green: super)</div>
@@ -29,21 +32,25 @@
         <div>- Rarer fish will make longer sequences of letters and score more
           points</div>
       </ul>
-      <hr style="margin: 10px 50px 0 50px;">
-      <h2 style="margin: 50px 0 0 20px;">Press anything to continue...</h2>
+      <div class="button">
+
+        <div id="btn-play">Play game</div>
+      </div>
+
     </div>
     <div id="modal-game-ended">
-      <h1 class="modal-title">Would you like to play again?</h1>
-      <h1>Token <span id="token-end"></span></h1>
+      <h1 class="modal-title">Would you like to play again ?</h1>
       <ul style="font-size: 26px;">
-        <div>Your score was :</div><div id="score"></div>
-        <div>High score was :</div><div id="highscore"></div>
+        <div>Your score was :<span id="score"></span></div>
+        <div>High score was :<span id="highscore"></span></div>
+        <div class="button">
+
+          <div id="play-again">Play again with 1 token</d>
+        </div>
       </ul>
-      <hr style="margin: 10px 50px 0 50px;">
-      <h2 style="margin: 50px 0 0 20px;">Press anything to continue...</h2>
+
     </div>
     <div id="modal-token">
-
       <!-- Modal content -->
       <div class="modal-content">
         <p>Token dose not exist </p>
