--- a/04. duy/fishing-react/public/fishing/index.html
+++ b/04. duy/fishing-react/public/fishing/index.html
@@ -20,7 +20,7 @@
     <div id="test2"></div>
     <div id="modal">
       <h1 class="modal-title">How to Play</h1>
-      <ul style="font-size: 16px;">
+      <ul style="font-size: 12px;">
         <div>Token left : <span id="token"></span></div>
         <div>- Left click to start the cast</div>
         <div>- Left click again to release at the optimal time (red: poor)
@@ -34,18 +34,18 @@
       </ul>
       <div class="button">
 
-        <div id="btn-play">Play game</div>
+        <div class="play-game" id="btn-play">Play game</div>
       </div>
 
     </div>
     <div id="modal-game-ended">
       <h1 class="modal-title">Would you like to play again ?</h1>
-      <ul style="font-size: 26px;">
+      <ul style="font-size: 22px;">
         <div>Your score was :<span id="score"></span></div>
         <div>High score was :<span id="highscore"></span></div>
         <div class="button">
 
-          <div id="play-again">Play again with 1 token</d>
+          <div class="play-game" id="play-again">Play again with 1 token</d>
         </div>
       </ul>
 
