--- a/05. vu/hangman-reactjs-firebase/public/Hangman/index.html
+++ b/05. vu/hangman-reactjs-firebase/public/Hangman/index.html
@@ -9,15 +9,15 @@
   </head>
 
   <body>
-    <div class="wrapper" style="padding-top: 20px">
-      <h1>Hangman</h1>
-      <!-- <h2>Vanilla JavaScript Hangman Game</h2>
-      <p>
-        Use the alphabet below to guess the word, or click hint to get a clue.
-      </p> -->
-    </div>
-    <div class="wrapper">
-      <div style="display: flex; justify-content: space-evenly;height:30vh">
+    <div class="wrapper" style="padding-top:80px">
+      <div
+        style="
+          display: flex;
+          justify-content: space-around;
+          height: 30vh;
+          padding-bottom: 70px;
+        "
+      >
         <canvas id="stickman"
           >This Text will show if the Browser does NOT support HTML5 Canvas
           tag</canvas
@@ -29,7 +29,7 @@
         </div>
         <div id="buttons" style="width: 20.5vw"></div>
       </div>
-      <p id="catagoryName" style="margin:auto;width:40vw;"></p>
+      <p id="catagoryName" style="margin: auto; width: 40vw"></p>
       <div id="hold"></div>
       <p id="mylives"></p>
       <!-- <p id="clue">Clue -</p> -->
