--- a/05. vu/hangman-reactjs-firebase/public/Hangman/index.html
+++ b/05. vu/hangman-reactjs-firebase/public/Hangman/index.html
@@ -9,29 +9,43 @@
   </head>
 
   <body>
-    <div class="wrapper" style="padding-top: 20px">
-      <h1>Hangman</h1>
-      <!-- <h2>Vanilla JavaScript Hangman Game</h2>
-      <p>
-        Use the alphabet below to guess the word, or click hint to get a clue.
-      </p> -->
-    </div>
-    <div class="wrapper">
-      <div style="display: flex; justify-content: space-evenly">
-        <canvas id="stickman"
+    <div class="wrapper" style="padding-top: 80px">
+      <div
+        style="
+          display: flex;
+          justify-content: space-around;
+          height: 30vh;
+          padding-bottom: 70px;
+        "
+      >
+        <canvas
+          id="stickman"
+          style="
+            text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px;
+            box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
+          "
           >This Text will show if the Browser does NOT support HTML5 Canvas
           tag</canvas
         >
         <div>
-          <h3>Score: <span id="score"></span></h3>
-          <h3>High Score: <span id="highScore"></span></h3>
-          <h3>Token: <span id="token"></span></h3>
+          <h3 style="display: none">Score: <span id="score"></span></h3>
+          <h3 style="display: none">
+            High Score: <span id="highScore"></span>
+          </h3>
+          <h3><span id="token"></span></h3>
         </div>
         <div id="buttons" style="width: 20.5vw"></div>
       </div>
-      <p id="catagoryName"></p>
-      <div id="hold"></div>
-      <p id="mylives"></p>
+      <p
+        id="catagoryName"
+        style="
+          margin: auto;
+          width: 40vw;
+          text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px;
+        "
+      ></p>
+      <div id="hold" style="text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px"></div>
+      <p id="mylives" style="text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px"></p>
       <!-- <p id="clue">Clue -</p> -->
 
       <div class="container">
@@ -40,50 +54,20 @@
       </div>
     </div>
     <div class="donate" id="donate">
-      <h1>Please donate to play !</h1>
-    </div>
-    <div class="donateBank" id="donateBank">
-      <h2>Just one more step to play again.</h2>
-      <div
-        style="display: flex; flex-direction: column; width: 25vw; margin: auto"
-      >
-        <p style="font-size: smaller; margin-top: 10px">Please choose a bank</p>
-        <select id="bank" class="bankSelect">
-          <option value="Vietcombank">Vietcombank</option>
-          <option value="BIDV">BIDV</option>
-          <option value="Vietinbank">Vietinbank</option>
-          <option
-            value="MB Bank
-  "
-            selected
-          >
-            MB Bank
-          </option>
-          <option value="ACB" selected>ACB</option>
-          <option value="Sacombank" selected>Sacombank</option>
-        </select>
-
-        <p style="font-size: smaller; margin-top: 15px">Please type your PIN</p>
-
-        <form name="myForm">
-          <input
-            name="fname"
-            type="password"
-            class="passBank"
-            style="margin-bottom: 20px"
-          />
-        </form>
-        <button class="submitBank" id="submitBank">Submit</button>
-      </div>
+      <h1 style="text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px">
+        Please donate to play !
+      </h1>
     </div>
 
     <div class="gameOver" id="gameOver">
-      <h1>Game Over</h1>
-      <h4>Your Score: <span id="showScore"></span></h4>
+      <h1 style="text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px">Game Over</h1>
+      <h4 style="text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px">
+        Your Score: <span id="showScore"></span>
+      </h4>
       <button id="reset">Play again</button>
     </div>
     <div class="youWin" id="youWin">
-      <h1>You win</h1>
+      <h1 style="text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px">You win</h1>
       <button id="resetWin">Play again</button>
     </div>
     <div
@@ -99,8 +83,10 @@
           justify-content: space-evenly;
         "
       >
-        <h2>Your hint: &nbsp;</h2>
-        <p id="clue"></p>
+        <h2 style="text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px">
+          Your hint: &nbsp;
+        </h2>
+        <p id="clue" style="text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px"></p>
       </div>
       <span
         style="
@@ -108,6 +94,8 @@
           font-size: 30px;
           font-weight: 600;
           cursor: pointer;
+          text-shadow: rgb(0 0 0 / 80%) -1px 3px 13px;
+          padding-right: 20px;
         "
         id="closeHintModal"
         >X</span
